# Il2CppFramework

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
GameAssembly/: CMakeLists.txt
GameAssembly/include/System/: Action.hpp  Delegate.hpp  DelegateData.hpp  Exception.hpp  MulticastDelegate.hpp  Object.hpp  String.hpp
GameAssembly/include/System/Threading/: ThreadPool.hpp  WaitCallback.hpp
GameAssembly/include/UnityEngine/: Application.hpp  Behaviour.hpp  Camera.hpp  CameraClearFlags.hpp  CameraType.hpp  Color.hpp  Component.hpp  DepthTextureMode.hpp  GameObject.hpp  Input.hpp  KeyCode.hpp  Material.hpp  Matrix4x4.hpp  MonoBehaviour.hpp  Object.hpp  Quaternion.hpp  Rect.hpp  RenderTexture.hpp  RenderingPath.hpp  Sprite.hpp  StereoTargetEyeMask.hpp  SystemInfo.hpp  Texture.hpp  Transform.hpp  TransparencySortMode.hpp  Vector2.hpp  Vector3.hpp
GameAssembly/include/UnityEngine/Rendering/: OpaqueSortMode.hpp
GameAssembly/include/UnityEngine/SceneManagement/: Scene.hpp  SceneManager.hpp
GameAssembly/include/il2cpp/: Array.hpp  Assembly.hpp  Class.hpp  Event.hpp  Field.hpp  Image.hpp  Method.hpp  MethodFinder.hpp  Property.hpp  Type.hpp  il2cpp.hpp
GameAssembly/optimized/: update_patch.cpp
GameAssembly/src/System/: String.cpp
GameAssembly/src/System/Threading/: WaitCallback.cpp
GameAssembly/src/il2cpp/: Class.cpp  Method.cpp  il2cpp.cpp  il2cpp_data.cpp  il2cpp_data.hpp
bootstrap/: bootstrap_win32.cpp
clients/example/: CMakeLists.txt
clients/example/src/: dllmain.cpp  pch.hpp
clients/example/src/loggers/: FileLogger.cpp
clients/example/src/modules/: FPSLimiter.cpp  ImGuiDemo.cpp  Test.cpp  UnityExplorer.cpp
cmake/: add_autogen.cmake  add_optimized.cmake  check_file_changed.cmake  config_all_projects.cmake  config_common.cmake  config_flags.cmake  config_mini.cmake  config_mod.cmake  config_project.cmake  create_source_filters.cmake  find_dia_sdk.cmake
common/: CMakeLists.txt
common/include/common/: CallCached.hpp  ColoredString.hpp  FileLogger.hpp  Log.hpp  Logger.hpp  LoggerManager.hpp  Module.hpp  ModuleManager.hpp  NoImplement.hpp  SEHGuarded.hpp  StringUtils.hpp  TryGuarded.hpp  autogen_pch.hpp  simple_generator.hpp
common/src/: ImGuiHook.cpp  Log.cpp  Logger.cpp  LoggerManager.cpp  Module.cpp  ModuleManager.cpp  SEHGuarded.cpp  TryGuarded.cpp  bootstrap.cpp  pch.hpp
debuggers/StackTracer/: CMakeLists.txt
debuggers/StackTracer/include/StackTracer/: StackTracer.hpp
debuggers/StackTracer/src/: StackTracer.cpp  pch.hpp
example/: CMakeLists.txt
example/src/: framework_config.cpp  pch.hpp
example/src/modules/: FPSLimiter.cpp  ImGuiDemo.cpp  ImGuiDumper.cpp  Loader.cpp  UnityExplorer.cpp
include/Il2CppModFramework/: Mod.hpp  WindowsWrapper.hpp
libs/imgui_wrapper/: CMakeLists.txt
src/: DefaultMod.cpp  WindowsWrapper.cpp
src/bootstrap/: bootstrap_common.cpp  bootstrap_win32.cpp
tools/: git-master.bat  git-prune-deleted-branches.ps1  git-push-branched.bat
tools/autogen/: CMakeLists.txt  ParsedResult.hpp  SimpleGenerator.cpp  SimpleGenerator.hpp  SimpleParser.cpp  SimpleParser.hpp  main.cpp
