cmake_minimum_required(VERSION 3.13)
project("StackTracer")

include("${ICMF_SOURCE_DIR}/cmake/config_common.cmake")

config_common(StackTracer STATIC)
target_precompile_headers(StackTracer PRIVATE src/pch.hpp)

if(ICMF_STACK_TRACER STREQUAL "DIA")
	include("${ICMF_SOURCE_DIR}/cmake/find_dia_sdk.cmake")
	message(STATUS ${DiaSDK_INCLUDE_DIRS})
	message(STATUS ${DiaSDK_LIBRARIES})
	target_include_directories(StackTracer PRIVATE ${DiaSDK_INCLUDE_DIRS})
	target_link_libraries(StackTracer ${DiaSDK_LIBRARIES})
	target_compile_definitions(StackTracer PRIVATE ICMF_STACK_TRACER_DIA=1)
elseif(ICMF_STACK_TRACER STREQUAL "DBGHELP")
	target_compile_definitions(StackTracer PRIVATE ICMF_STACK_TRACER_DBGHELP=1)
else()
	target_compile_definitions(StackTracer PRIVATE ICMF_STACK_TRACER_NONE=1)
endif()
